# backend

./: .env.example  .gitignore  API_Contract.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
data/: Historic Sites (GEOJSON).geojson  Tourist Attractions.geojson
db/: schema.sql
framework/: Dockerfile  Dockerfile.dockerignore  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
framework/clients/: http.py  redis.py
framework/routers/: admin.py  auth.py  hawker.py  historic_sites.py  mongodb_test.py  parks.py  rides.py  route_suggestion.py  routes.py  tourist_attractions.py  user.py  weather.py
framework/services/: admin.py  auth.py  cloudwatch.py  feedback.py  hawker.py  health.py  historic_sites.py  parks.py  rides.py  route_suggestion.py  routes.py  tourist_attractions.py  user.py
framework/utils/: cache.py
infra/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/environments/dev/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/environments/prod/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/modules/cdn/: main.tf  outputs.tf  variables.tf
infra/modules/core/: main.tf  outputs.tf  variables.tf
infra/modules/ecs/: main.tf  outputs.tf  variables.tf
infra/modules/lambda/: main.tf  outputs.tf  utils.tf  variables.tf
infra/modules/monitoring/: main.tf  (+2 more)
route/: Dockerfile  generate_route.py  server.py
scripts/: import_community_routes.py  import_geojson.py  import_trees.py  load_test.py  predownload_sg_graph.py
(+13 files in other folders)
