[project]
name = "backend"
version = "0.1.0"
description = "Backend application of CycleLink"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "psycopg2-binary==2.9.11",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "geoalchemy2>=0.15",
    "httpx>=0.28",
    "bike-route",
    "pymongo>=4.16.0",
    "boto3>=1.35",
    "redis>=5.0.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "scikit-learn>=1.8.0",
]

[tool.uv.sources]
bike-route = { workspace = true, editable = true }

[tool.uv.workspace]
members = [
    "route/bike_route",
]
